# plankton_ml

./: .env  .gitignore  DVC.md  Dockerfile  PIPELINES.md  README.md  VECTOR_STORES.md  environment.yml  luigi.cfg  pyproject.toml
.dvc/: config
.github/workflows/: pages_graphs.yml  pipeline.yml  pytest_coverage.yml  test_python.yml
data/: 19_10_Tank22_1.tif.dvc  19_10_Tank22_10.tif.dvc  19_10_Tank22_100.tif.dvc  19_10_Tank22_1000.tif.dvc  19_10_Tank22_10000.tif.dvc  19_10_Tank22_10001.tif.dvc  19_10_Tank22_10002.tif.dvc  19_10_Tank22_10003.tif.dvc  19_10_Tank22_10004.tif.dvc  19_10_Tank22_10005.tif.dvc  19_10_Tank22_10006.tif.dvc  19_10_Tank22_10007.tif.dvc  19_10_Tank22_10008.tif.dvc  19_10_Tank22_10009.tif.dvc  19_10_Tank22_1001.tif.dvc  19_10_Tank22_10010.tif.dvc  19_10_Tank22_10011.tif.dvc  19_10_Tank22_10012.tif.dvc  19_10_Tank22_10013.tif.dvc  19_10_Tank22_10014.tif.dvc  19_10_Tank22_10015.tif.dvc  19_10_Tank22_10016.tif.dvc  19_10_Tank22_10017.tif.dvc  19_10_Tank22_10018.tif.dvc  19_10_Tank22_10019.tif.dvc  19_10_Tank22_1002.tif.dvc  19_10_Tank22_10020.tif.dvc  19_10_Tank22_10021.tif.dvc  19_10_Tank22_10022.tif.dvc  19_10_Tank22_10023.tif.dvc  19_10_Tank22_10024.tif.dvc  19_10_Tank22_10025.tif.dvc  19_10_Tank22_10026.tif.dvc  19_10_Tank22_10027.tif.dvc  19_10_Tank22_10028.tif.dvc  19_10_Tank22_10029.tif.dvc  19_10_Tank22_1003.tif.dvc  19_10_Tank22_10030.tif.dvc  19_10_Tank22_10031.tif.dvc  19_10_Tank22_10032.tif.dvc  (+495 more)
docker/: Dockerfile.api
docs/: index.md
docs/diagrams/could_be/: plankton_app_deployment.drawio
docs/source/: conf.py  index.rst  installation.rst  labelstudio.rst  quickstart.rst
docs/source/api/: cyto_ml.data.rst  cyto_ml.models.rst  cyto_ml.pipeline.rst  cyto_ml.rst  cyto_ml.visualisation.rst  modules.rst
models/: ResNet_18_3classes_RGB.pth.dvc  kmeans-untagged-images-lana.pkl
notebooks/: Clustering.md  VectorSearch.md
presentation/: README.md  presentation.qmd
scripts/: cluster.py  dvc.yaml  image_embeddings.py  image_embeddings_api.py  image_index.py  image_metadata.py  intake_metadata.py  intake_to_dvc.sh  params.yaml  run_luigi_pipeline.py
src/cyto_ml/data/: db_config.py  decollage.py  flowcam.py  image.py  intake.py  labels.py  s3.py  vectorstore.py
src/cyto_ml/models/: api.py  scivision.py  utils.py
src/cyto_ml/pipeline/: pipeline_decollage.py
src/cyto_ml/visualisation/: app.py  config.py  visualisation_app.py
src/cyto_ml/visualisation/pages/: 02_kmeans.py  03_classes.py
src/label_studio_cyto_ml/: Dockerfile  README.md  _wsgi.py  docker-compose.yml  model.py  requirements.txt  test_api.py  test_predict.py
tests/: conftest.py  test_decollage.py  test_image_embeddings.py  test_model_api.py  test_object_store.py  test_pipeline.py  test_prepare_image.py  test_vector_store.py  test_visualisation_app.py
tests/fixtures/19_10_Tank25_blanksremoved/: 19_10_Tank25_blanksremoved.cla  19_10_Tank25_blanksremoved.ctx  19_10_Tank25_blanksremoved.edg  19_10_Tank25_blanksremoved.lst  19_10_Tank25_blanksremoved_images_000001.tif  19_10_Tank25_blanksremoved_images_000002.tif  19_10_Tank25_blanksremoved_images_000003.tif  19_10_Tank25_blanksremoved_images_000004.tif  19_10_Tank25_blanksremoved_images_000005.tif  19_10_Tank25_blanksremoved_images_000006.tif  19_10_Tank25_blanksremoved_images_000007.tif  19_10_Tank25_blanksremoved_images_000008.tif  19_10_Tank25_blanksremoved_images_000009.tif  19_10_Tank25_blanksremoved_notes.txt  19_10_Tank25_blanksremoved_run_summary.txt
tests/fixtures/19_10_Tank25_blanksremoved/decollage/: test_0.tif
tests/fixtures/greyscale/: TC18_280524_4840.tif
tests/fixtures/test_images/: testymctestface_113.tif.dvc
