[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cyto_ml"
version = "0.2.0"
requires-python = ">=3.12"
description = "This package supports the processing and analysis of plankton sample data"
readme = "README.md"
dependencies = [
    "boto3",
    "chromadb",
    "imagecodecs",
    "intake==0.7.0",
    "intake-xarray",
    "pandas",
    "plotly",
    "pyexiftool",
    "python-dotenv",
    "scikit-image", # secretly required by intake-xarray as default reader
    "streamlit", 
    "torch",
    "xarray",
    "resnet50-cefas@git+https://github.com/jmarshrossney/resnet50-cefas",
]

[project.optional-dependencies]
jupyter = ["jupyterlab", "jupytext", "matplotlib", "scikit-learn"]
test = ["pytest", "pytest-cov", "parameterized"]
lint = ["flake8", "isort", "ruff"]
all = ["cyto_ml[jupyter,test,lint]"]

[tool.jupytext]
formats = "ipynb,md"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
src = ["src", "tests"]
include = ["src/**.py"]
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "A", "PLC", "PLE", "PLW", "I", "N816", "ANN001", "ANN201", "ANN202", "ANN205", "ANN206"]

[tool.ruff.lint.flake8-type-checking]
strict = true
